exports[`invalid(1): a { height: 0; padding-bottom: 56.25%; } 1`] = `

  1 | a { height: 0; padding-bottom: 56.25%; }

`;

exports[`invalid(1): a { height: 0; padding-bottom: 56.25%; } 2`] = `

Message:
> 1 | a { height: 0; padding-bottom: 56.25%; }
    |                ^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(10): a { height: 0; padding-top: 25%; padding-bottom: 25%; } 1`] = `

  1 | a { height: 0; padding-top: 25%; padding-bottom: 25%; }

`;

exports[`invalid(10): a { height: 0; padding-top: 25%; padding-bottom: 25%; } 2`] = `

Message:
> 1 | a { height: 0; padding-top: 25%; padding-bottom: 25%; }
    |                ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(11): a { height: 0; padding-top: 10px; padding-bottom: 50%; } 1`] = `

  1 | a { height: 0; padding-top: 10px; padding-bottom: 50%; }

`;

exports[`invalid(11): a { height: 0; padding-top: 10px; padding-bottom: 50%; } 2`] = `

Message:
> 1 | a { height: 0; padding-top: 10px; padding-bottom: 50%; }
    |                                   ^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(12): a { height: 0; padding: 50% 0; } 1`] = `

  1 | a { height: 0; padding: 50% 0; }

`;

exports[`invalid(12): a { height: 0; padding: 50% 0; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% 0; }
    |                ^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(13): a { height: 0; padding: 50% 0 0; } 1`] = `

  1 | a { height: 0; padding: 50% 0 0; }

`;

exports[`invalid(13): a { height: 0; padding: 50% 0 0; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% 0 0; }
    |                ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(14): a { height: 0; padding: 0 0 50% 0; } 1`] = `

  1 | a { height: 0; padding: 0 0 50% 0; }

`;

exports[`invalid(14): a { height: 0; padding: 0 0 50% 0; } 2`] = `

Message:
> 1 | a { height: 0; padding: 0 0 50% 0; }
    |                ^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(15): a { height: 0; padding: 25% 0 25%; } 1`] = `

  1 | a { height: 0; padding: 25% 0 25%; }

`;

exports[`invalid(15): a { height: 0; padding: 25% 0 25%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 25% 0 25%; }
    |                ^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(16): a { height: 0; padding: 50% 0px 0% -0em; } 1`] = `

  1 | a { height: 0; padding: 50% 0px 0% -0em; }

`;

exports[`invalid(16): a { height: 0; padding: 50% 0px 0% -0em; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% 0px 0% -0em; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(17): a { height: 0; padding: calc(9 / 16 * 100%) 0; } 1`] = `

  1 | a { height: 0; padding: calc(9 / 16 * 100%) 0; }

`;

exports[`invalid(17): a { height: 0; padding: calc(9 / 16 * 100%) 0; } 2`] = `

Message:
> 1 | a { height: 0; padding: calc(9 / 16 * 100%) 0; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(18): a { height: 0; padding-top: calc(9 / 16 * 100%); } 1`] = `

  1 | a { height: 0; padding-top: calc(9 / 16 * 100%); }

`;

exports[`invalid(18): a { height: 0; padding-top: calc(9 / 16 * 100%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(9 / 16 * 100%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(19): a { height: 0; padding-top: calc(100% / (16 / 9)); } 1`] = `

  1 | a { height: 0; padding-top: calc(100% / (16 / 9)); }

`;

exports[`invalid(19): a { height: 0; padding-top: calc(100% / (16 / 9)); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(100% / (16 / 9)); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(2): a { padding-top: 75%; height: 0; } 1`] = `

  1 | a { padding-top: 75%; height: 0; }

`;

exports[`invalid(2): a { padding-top: 75%; height: 0; } 2`] = `

Message:
> 1 | a { padding-top: 75%; height: 0; }
    |     ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(20): a { height: 0; padding-top: calc(100% - 43.75%); } 1`] = `

  1 | a { height: 0; padding-top: calc(100% - 43.75%); }

`;

exports[`invalid(20): a { height: 0; padding-top: calc(100% - 43.75%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(100% - 43.75%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(21): a { height: 0; padding-top: calc(25% + 25% * 2); } 1`] = `

  1 | a { height: 0; padding-top: calc(25% + 25% * 2); }

`;

exports[`invalid(21): a { height: 0; padding-top: calc(25% + 25% * 2); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(25% + 25% * 2); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(22): a { height: 0; padding-top: calc((100% - 25%) / 2); } 1`] = `

  1 | a { height: 0; padding-top: calc((100% - 25%) / 2); }

`;

exports[`invalid(22): a { height: 0; padding-top: calc((100% - 25%) / 2); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc((100% - 25%) / 2); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(23): a { height: 0; padding-top: calc(-50% * -1); } 1`] = `

  1 | a { height: 0; padding-top: calc(-50% * -1); }

`;

exports[`invalid(23): a { height: 0; padding-top: calc(-50% * -1); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(-50% * -1); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(24): a { height: 0; padding-top: calc(0% + 50%); } 1`] = `

  1 | a { height: 0; padding-top: calc(0% + 50%); }

`;

exports[`invalid(24): a { height: 0; padding-top: calc(0% + 50%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(0% + 50%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(25): a { height: 0; padding-top: calc(50% * calc(3 / 2)); } 1`] = `

  1 | a { height: 0; padding-top: calc(50% * calc(3 / 2)); }

`;

exports[`invalid(25): a { height: 0; padding-top: calc(50% * calc(3 / 2)); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(50% * calc(3 / 2)); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(26): a { height: 0; padding-top: calc(50% * 100% / 100%); } 1`] = `

  1 | a { height: 0; padding-top: calc(50% * 100% / 100%); }

`;

exports[`invalid(26): a { height: 0; padding-top: calc(50% * 100% / 100%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(50% * 100% / 100%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(27): a { height: 0; padding-top: calc(100% / (100% / 50%)); } 1`] = `

  1 | a { height: 0; padding-top: calc(100% / (100% / 50%)); }

`;

exports[`invalid(27): a { height: 0; padding-top: calc(100% / (100% / 50%)); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(100% / (100% / 50%)); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(28): a { height: 0; padding-top: calc(50% / 2 / 2); } 1`] = `

  1 | a { height: 0; padding-top: calc(50% / 2 / 2); }

`;

exports[`invalid(28): a { height: 0; padding-top: calc(50% / 2 / 2); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(50% / 2 / 2); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(29): a { height: 0; padding-top: calc(50% - 10% - 10%); } 1`] = `

  1 | a { height: 0; padding-top: calc(50% - 10% - 10%); }

`;

exports[`invalid(29): a { height: 0; padding-top: calc(50% - 10% - 10%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(50% - 10% - 10%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(3): a { height: 0px; padding-top: 50%; } 1`] = `

  1 | a { height: 0px; padding-top: 50%; }

`;

exports[`invalid(3): a { height: 0px; padding-top: 50%; } 2`] = `

Message:
> 1 | a { height: 0px; padding-top: 50%; }
    |                  ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(30): a { height: 0; padding-top: CALC(+100% * +9 / +16); } 1`] = `

  1 | a { height: 0; padding-top: CALC(+100% * +9 / +16); }

`;

exports[`invalid(30): a { height: 0; padding-top: CALC(+100% * +9 / +16); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: CALC(+100% * +9 / +16); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(31): a { height: 0; padding-top: calc(9 /* ratio */ / 16 * 100%); } 1`] = `

  1 | a { height: 0; padding-top: calc(9 /* ratio */ / 16 * 100%); }

`;

exports[`invalid(31): a { height: 0; padding-top: calc(9 /* ratio */ / 16 * 100%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(9 /* ratio */ / 16 * 100%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(32): a {\r\n  height: 0;\r\n  padding-top: 50%;\r\n} 1`] = `

  1 | a {
  2 |   height: 0;
  3 |   padding-top: 50%;
  4 | }

`;

exports[`invalid(32): a {\r\n  height: 0;\r\n  padding-top: 50%;\r\n} 2`] = `

Message:
  1 | a {
  2 |   height: 0;
> 3 |   padding-top: 50%;
    |   ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.
  4 | }

`;

exports[`invalid(33): a::before { height: 0; padding-top: 50%; } 1`] = `

  1 | a::before { height: 0; padding-top: 50%; }

`;

exports[`invalid(33): a::before { height: 0; padding-top: 50%; } 2`] = `

Message:
> 1 | a::before { height: 0; padding-top: 50%; }
    |                        ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(34): a { & .child { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { & .child { height: 0; padding-top: 50%; } }

`;

exports[`invalid(34): a { & .child { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { & .child { height: 0; padding-top: 50%; } }
    |                           ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(35): @media (width > 10px) { a { height: 0; padding-top: 50%; } } 1`] = `

  1 | @media (width > 10px) { a { height: 0; padding-top: 50%; } }

`;

exports[`invalid(35): @media (width > 10px) { a { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | @media (width > 10px) { a { height: 0; padding-top: 50%; } }
    |                                        ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(36): @supports (display: grid) { a { height: 0; padding-top: 50%; } } 1`] = `

  1 | @supports (display: grid) { a { height: 0; padding-top: 50%; } }

`;

exports[`invalid(36): @supports (display: grid) { a { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | @supports (display: grid) { a { height: 0; padding-top: 50%; } }
    |                                            ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(37): @supports (font-family: \"aspect-ratio\") { a { height: 0; padding-top: 50%; } } 1`] = `

  1 | @supports (font-family: "aspect-ratio") { a { height: 0; padding-top: 50%; } }

`;

exports[`invalid(37): @supports (font-family: \"aspect-ratio\") { a { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | @supports (font-family: "aspect-ratio") { a { height: 0; padding-top: 50%; } }
    |                                                          ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(38): @container (width > 10px) { a { height: 0; padding-top: 50%; } } 1`] = `

  1 | @container (width > 10px) { a { height: 0; padding-top: 50%; } }

`;

exports[`invalid(38): @container (width > 10px) { a { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | @container (width > 10px) { a { height: 0; padding-top: 50%; } }
    |                                            ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(39): @layer cards { a { height: 0; padding-top: 50%; } } 1`] = `

  1 | @layer cards { a { height: 0; padding-top: 50%; } }

`;

exports[`invalid(39): @layer cards { a { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | @layer cards { a { height: 0; padding-top: 50%; } }
    |                               ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(4): a { height: -0.0EM; padding-top: 150%; } 1`] = `

  1 | a { height: -0.0EM; padding-top: 150%; }

`;

exports[`invalid(4): a { height: -0.0EM; padding-top: 150%; } 2`] = `

Message:
> 1 | a { height: -0.0EM; padding-top: 150%; }
    |                     ^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(40): @scope (.cards) { a { height: 0; padding-top: 50%; } } 1`] = `

  1 | @scope (.cards) { a { height: 0; padding-top: 50%; } }

`;

exports[`invalid(40): @scope (.cards) { a { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | @scope (.cards) { a { height: 0; padding-top: 50%; } }
    |                                  ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(41): a { @media (width > 10px) { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { @media (width > 10px) { height: 0; padding-top: 50%; } }

`;

exports[`invalid(41): a { @media (width > 10px) { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { @media (width > 10px) { height: 0; padding-top: 50%; } }
    |                                        ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(42): a { @supports (display: grid) { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { @supports (display: grid) { height: 0; padding-top: 50%; } }

`;

exports[`invalid(42): a { @supports (display: grid) { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { @supports (display: grid) { height: 0; padding-top: 50%; } }
    |                                            ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(43): a { @container (width > 10px) { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { @container (width > 10px) { height: 0; padding-top: 50%; } }

`;

exports[`invalid(43): a { @container (width > 10px) { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { @container (width > 10px) { height: 0; padding-top: 50%; } }
    |                                            ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(44): a { @layer cards { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { @layer cards { height: 0; padding-top: 50%; } }

`;

exports[`invalid(44): a { @layer cards { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { @layer cards { height: 0; padding-top: 50%; } }
    |                               ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(45): a { @scope (&) { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { @scope (&) { height: 0; padding-top: 50%; } }

`;

exports[`invalid(45): a { @scope (&) { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { @scope (&) { height: 0; padding-top: 50%; } }
    |                             ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(46): a { @starting-style { height: 0; padding-top: 50%; } } 1`] = `

  1 | a { @starting-style { height: 0; padding-top: 50%; } }

`;

exports[`invalid(46): a { @starting-style { height: 0; padding-top: 50%; } } 2`] = `

Message:
> 1 | a { @starting-style { height: 0; padding-top: 50%; } }
    |                                  ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(47): a { height: 0; padding: 0 0 calc(100% - 43.75%); } 1`] = `

  1 | a { height: 0; padding: 0 0 calc(100% - 43.75%); }

`;

exports[`invalid(47): a { height: 0; padding: 0 0 calc(100% - 43.75%); } 2`] = `

Message:
> 1 | a { height: 0; padding: 0 0 calc(100% - 43.75%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(48): a { height: 0; padding: calc(25% + 25%) 0 calc(100% / 2); } 1`] = `

  1 | a { height: 0; padding: calc(25% + 25%) 0 calc(100% / 2); }

`;

exports[`invalid(48): a { height: 0; padding: calc(25% + 25%) 0 calc(100% / 2); } 2`] = `

Message:
> 1 | a { height: 0; padding: calc(25% + 25%) 0 calc(100% / 2); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(49): a { height: 0; padding-top: calc((50% / 25% + 1) * 50%); } 1`] = `

  1 | a { height: 0; padding-top: calc((50% / 25% + 1) * 50%); }

`;

exports[`invalid(49): a { height: 0; padding-top: calc((50% / 25% + 1) * 50%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc((50% / 25% + 1) * 50%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(5): a { HEIGHT: +0; PADDING-TOP: 50%; } 1`] = `

  1 | a { HEIGHT: +0; PADDING-TOP: 50%; }

`;

exports[`invalid(5): a { HEIGHT: +0; PADDING-TOP: 50%; } 2`] = `

Message:
> 1 | a { HEIGHT: +0; PADDING-TOP: 50%; }
    |                 ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(50): a { height: 0; padding-top: calc((25% * 25% + 75% * 75%) / 100%); } 1`] = `

  1 | a { height: 0; padding-top: calc((25% * 25% + 75% * 75%) / 100%); }

`;

exports[`invalid(50): a { height: 0; padding-top: calc((25% * 25% + 75% * 75%) / 100%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc((25% * 25% + 75% * 75%) / 100%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(51): a { height: 0; padding-top: calc((50% - 25%) * 3); } 1`] = `

  1 | a { height: 0; padding-top: calc((50% - 25%) * 3); }

`;

exports[`invalid(51): a { height: 0; padding-top: calc((50% - 25%) * 3); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc((50% - 25%) * 3); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(52): a { height: 0; padding-top: calc((25% - 75%) * -1); } 1`] = `

  1 | a { height: 0; padding-top: calc((25% - 75%) * -1); }

`;

exports[`invalid(52): a { height: 0; padding-top: calc((25% - 75%) * -1); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc((25% - 75%) * -1); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(53): a { height: 0; padding-top: calc(1 / 2% * 50% * 50%); } 1`] = `

  1 | a { height: 0; padding-top: calc(1 / 2% * 50% * 50%); }

`;

exports[`invalid(53): a { height: 0; padding-top: calc(1 / 2% * 50% * 50%); } 2`] = `

Message:
> 1 | a { height: 0; padding-top: calc(1 / 2% * 50% * 50%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(54): a { height: 0; padding: 50%; } 1`] = `

  1 | a { height: 0; padding: 50%; }

`;

exports[`invalid(54): a { height: 0; padding: 50%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50%; }
    |                ^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(55): a { height: 0; padding: 50% 10px; } 1`] = `

  1 | a { height: 0; padding: 50% 10px; }

`;

exports[`invalid(55): a { height: 0; padding: 50% 10px; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% 10px; }
    |                ^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(56): a { height: 0; padding: 50% 0 10px; } 1`] = `

  1 | a { height: 0; padding: 50% 0 10px; }

`;

exports[`invalid(56): a { height: 0; padding: 50% 0 10px; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% 0 10px; }
    |                ^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(57): a { height: 0; padding: 50% 0 0 10%; } 1`] = `

  1 | a { height: 0; padding: 50% 0 0 10%; }

`;

exports[`invalid(57): a { height: 0; padding: 50% 0 0 10%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% 0 0 10%; }
    |                ^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(58): a { height: 0; padding: 25px 0 56.25%; } 1`] = `

  1 | a { height: 0; padding: 25px 0 56.25%; }

`;

exports[`invalid(58): a { height: 0; padding: 25px 0 56.25%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 25px 0 56.25%; }
    |                ^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(59): a { height: 0; padding: 25px 8px 56.25% 12px; } 1`] = `

  1 | a { height: 0; padding: 25px 8px 56.25% 12px; }

`;

exports[`invalid(59): a { height: 0; padding: 25px 8px 56.25% 12px; } 2`] = `

Message:
> 1 | a { height: 0; padding: 25px 8px 56.25% 12px; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(6): .video\\:wide { height: 0; padding-top: 56.25%; } 1`] = `

  1 | .video\\:wide { height: 0; padding-top: 56.25%; }

`;

exports[`invalid(6): .video\\:wide { height: 0; padding-top: 56.25%; } 2`] = `

Message:
> 1 | .video\\:wide { height: 0; padding-top: 56.25%; }
    |                           ^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(60): a { height: 0; padding: 25PX 8EM 56.25% 12REM; } 1`] = `

  1 | a { height: 0; padding: 25PX 8EM 56.25% 12REM; }

`;

exports[`invalid(60): a { height: 0; padding: 25PX 8EM 56.25% 12REM; } 2`] = `

Message:
> 1 | a { height: 0; padding: 25PX 8EM 56.25% 12REM; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(61): a { height: 0; padding: 0 8px calc(9 / 16 * 100%); } 1`] = `

  1 | a { height: 0; padding: 0 8px calc(9 / 16 * 100%); }

`;

exports[`invalid(61): a { height: 0; padding: 0 8px calc(9 / 16 * 100%); } 2`] = `

Message:
> 1 | a { height: 0; padding: 0 8px calc(9 / 16 * 100%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(62): a { height: 0; padding: 50% calc(25% + 25%); } 1`] = `

  1 | a { height: 0; padding: 50% calc(25% + 25%); }

`;

exports[`invalid(62): a { height: 0; padding: 50% calc(25% + 25%); } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% calc(25% + 25%); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(63): a { height: 0; padding: 50% calc(0%); } 1`] = `

  1 | a { height: 0; padding: 50% calc(0%); }

`;

exports[`invalid(63): a { height: 0; padding: 50% calc(0%); } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% calc(0%); }
    |                ^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(64): a { height: 0; padding: calc(50% - 50%) 0 56.25%; } 1`] = `

  1 | a { height: 0; padding: calc(50% - 50%) 0 56.25%; }

`;

exports[`invalid(64): a { height: 0; padding: calc(50% - 50%) 0 56.25%; } 2`] = `

Message:
> 1 | a { height: 0; padding: calc(50% - 50%) 0 56.25%; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(65): a { height: 0; padding: 50% calc(25% - 25%) 0 calc(0% * -1); } 1`] = `

  1 | a { height: 0; padding: 50% calc(25% - 25%) 0 calc(0% * -1); }

`;

exports[`invalid(65): a { height: 0; padding: 50% calc(25% - 25%) 0 calc(0% * -1); } 2`] = `

Message:
> 1 | a { height: 0; padding: 50% calc(25% - 25%) 0 calc(0% * -1); }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(66): a { height: 0; padding: CALC(0%) 0 50%; } 1`] = `

  1 | a { height: 0; padding: CALC(0%) 0 50%; }

`;

exports[`invalid(66): a { height: 0; padding: CALC(0%) 0 50%; } 2`] = `

Message:
> 1 | a { height: 0; padding: CALC(0%) 0 50%; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(67): a { height: 0; padding: 0; padding-bottom: 56.25%; } 1`] = `

  1 | a { height: 0; padding: 0; padding-bottom: 56.25%; }

`;

exports[`invalid(67): a { height: 0; padding: 0; padding-bottom: 56.25%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 0; padding-bottom: 56.25%; }
    |                            ^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(68): a { height: 0; padding: 0; padding-top: 56.25%; } 1`] = `

  1 | a { height: 0; padding: 0; padding-top: 56.25%; }

`;

exports[`invalid(68): a { height: 0; padding: 0; padding-top: 56.25%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 0; padding-top: 56.25%; }
    |                            ^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(69): a { height: 0; PADDING: -0PX 0% +0EM 0; PADDING-BOTTOM: 50%; } 1`] = `

  1 | a { height: 0; PADDING: -0PX 0% +0EM 0; PADDING-BOTTOM: 50%; }

`;

exports[`invalid(69): a { height: 0; PADDING: -0PX 0% +0EM 0; PADDING-BOTTOM: 50%; } 2`] = `

Message:
> 1 | a { height: 0; PADDING: -0PX 0% +0EM 0; PADDING-BOTTOM: 50%; }
    |                                         ^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(7): a { height: 0; padding-top: 50% !important; } 1`] = `

  1 | a { height: 0; padding-top: 50% !important; }

`;

exports[`invalid(7): a { height: 0; padding-top: 50% !important; } 2`] = `

Message:
> 1 | a { height: 0; padding-top: 50% !important; }
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(70): a { height: 0; padding: 0 !important; padding-bottom: 50% !important; } 1`] = `

  1 | a { height: 0; padding: 0 !important; padding-bottom: 50% !important; }

`;

exports[`invalid(70): a { height: 0; padding: 0 !important; padding-bottom: 50% !important; } 2`] = `

Message:
> 1 | a { height: 0; padding: 0 !important; padding-bottom: 50% !important; }
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(71): a { height: 0; padding: 0; padding-top: 25%; padding-bottom: 25%; } 1`] = `

  1 | a { height: 0; padding: 0; padding-top: 25%; padding-bottom: 25%; }

`;

exports[`invalid(71): a { height: 0; padding: 0; padding-top: 25%; padding-bottom: 25%; } 2`] = `

Message:
> 1 | a { height: 0; padding: 0; padding-top: 25%; padding-bottom: 25%; }
    |                            ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(72): a { height: 0; padding: /* reset */ 0; padding-top: 0; padding-bottom: calc(9 / 16 * 100%); } 1`] = `

  1 | a { height: 0; padding: /* reset */ 0; padding-top: 0; padding-bottom: calc(9 / 16 * 100%); }

`;

exports[`invalid(72): a { height: 0; padding: /* reset */ 0; padding-top: 0; padding-bottom: calc(9 / 16 * 100%); } 2`] = `

Message:
> 1 | a { height: 0; padding: /* reset */ 0; padding-top: 0; padding-bottom: calc(9 / 16 * 100%); }
    |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(8): a { height: 0 !important; padding-top: 50%; } 1`] = `

  1 | a { height: 0 !important; padding-top: 50%; }

`;

exports[`invalid(8): a { height: 0 !important; padding-top: 50%; } 2`] = `

Message:
> 1 | a { height: 0 !important; padding-top: 50%; }
    |                           ^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;

exports[`invalid(9): a { height: /* zero */ 0; padding-top: /* ratio */ 50% /* trailing */; } 1`] = `

  1 | a { height: /* zero */ 0; padding-top: /* ratio */ 50% /* trailing */; }

`;

exports[`invalid(9): a { height: /* zero */ 0; padding-top: /* ratio */ 50% /* trailing */; } 2`] = `

Message:
> 1 | a { height: /* zero */ 0; padding-top: /* ratio */ 50% /* trailing */; }
    |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Consider using \`aspect-ratio\` instead of this zero-height percentage-padding workaround.

`;
